list admins page

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -33,10 +33,7 @@
     /customer/:id = Controller\Customer::viewCustomer
     /customer = Controller\Customer::listCustomer
 
-    /admin/edit/:id = Controller\Admin::editForm
-    /admin/delete/:id = Controller\Admin::deleteAdmin
-    /admin/create = Controller\Admin::createForm
-    /admin = Controller\Admin::listAdmin
+    /admins = Controller\Admin::getAdmins
 
     /logout = Controller\Login::logout
 
