functioning admin edit

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -9,7 +9,7 @@
     /customer/edit/:id = Controller\Customer::editCustomer
     /customer = Controller\Customer::createCustomer
 
-    /admin/edit/:id = Controller\Admin::editAdmin
+    /admin/:id = Controller\Admin::editAdmin
     /admin = Controller\Admin::createAdmin
 
     /login = Controller\Login::login
