functional creating admins

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -33,6 +33,7 @@
     /customer/:id = Controller\Customer::viewCustomer
     /customer = Controller\Customer::listCustomer
 
+    /admin/delete/:id = Controller\Admin::deleteAdmin
     /admin/:id = Controller\Admin::getAdmin
     /admins = Controller\Admin::getAdmins
 
