customer deets, yo

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -6,7 +6,7 @@
     /product/edit/:id = Controller\Product::editProduct
     /product = Controller\Product::createProduct
 
-    /customer/edit/:id = Controller\Customer::editCustomer
+    /customer/:id = Controller\Customer::editCustomer
     /customer = Controller\Customer::createCustomer
 
     /admin/:id = Controller\Admin::editAdmin
@@ -27,11 +27,9 @@
     /product/create = Controller\Product::createForm
     /product = Controller\Product::listProduct
 
-    /customer/edit/:id = Controller\Customer::editForm
     /customer/delete/:id = Controller\Customer::deleteCustomer
-    /customer/create = Controller\Customer::createForm
-    /customer/:id = Controller\Customer::viewCustomer
-    /customer = Controller\Customer::listCustomer
+    /customer/:id = Controller\Customer::getCustomer
+    /customers = Controller\Customer::getCustomers
 
     /admin/delete/:id = Controller\Admin::deleteAdmin
     /admin/:id = Controller\Admin::getAdmin
