continue work on customers, products and items

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -3,6 +3,8 @@
     /customer/:customer_id/item/edit/:item_id = Controller\Item::editItem
     /customer/:customer_id/item/create/ = Controller\Item::createItem
 
+    /item/edit/:id = Controller\Item::editItem
+
     /product/edit/:id = Controller\Product::editProduct
     /product = Controller\Product::createProduct
 
@@ -18,6 +20,8 @@
 [GET]
     /customer/:customer_id/invoice/:invoice_id = Controller\Invoice::viewInvoice
 
+    /item/:id = Controller\Item::getItem
+
     /customer/:customer_id/item/create/ = Controller\Item::createForm
     /customer/:customer_id/item/edit/:item_id = Controller\Item::editForm
     /customer/:customer_id/item/delete/:item_id = Controller\Item::deleteItem
@@ -25,7 +29,7 @@
     /product/edit/:id = Controller\Product::editForm
     /product/delete/:id = Controller\Product::deleteProduct
     /product/create = Controller\Product::createForm
-    /product = Controller\Product::listProduct
+    /products = Controller\Product::getProducts
 
     /customer/delete/:id = Controller\Customer::deleteCustomer
     /customer/:id = Controller\Customer::getCustomer
