editting customer items

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -4,6 +4,7 @@
     /customer/:customer_id/item/create/ = Controller\Item::createItem
 
     /item/edit/:id = Controller\Item::editItem
+    /item = Controller\Item::createItem
 
     /product/edit/:id = Controller\Product::editProduct
     /product = Controller\Product::createProduct
