rollback the code

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,2 +1,6 @@
-
+[database]
+    username = ordersmy_orders
+    database = ordersmy_orders
+    hostname = 127.0.0.1
+    password = m$%ukDeBZt%G
 
