--- a/config/routes.ini
+++ b/config/routes.ini
@@ -3,25 +3,18 @@
     /customer/:customer_id/item/edit/:item_id = Controller\Item::editItem
     /customer/:customer_id/item/create/ = Controller\Item::createItem
 
-    /item/edit/:id = Controller\Item::editItem
-    /item = Controller\Item::createItem
-
     /product/edit/:id = Controller\Product::editProduct
     /product = Controller\Product::createProduct
 
-    /customer/:id = Controller\Customer::editCustomer
+    /customer/edit/:id = Controller\Customer::editCustomer
     /customer = Controller\Customer::createCustomer
 
-    /admin/:id = Controller\Admin::editAdmin
+    /admin/edit/:id = Controller\Admin::editAdmin
     /admin = Controller\Admin::createAdmin
-
-    /login = Controller\Login::login
 
     / = Controller\Home::home
 [GET]
     /customer/:customer_id/invoice/:invoice_id = Controller\Invoice::viewInvoice
-
-    /item/:id = Controller\Item::getItem
 
     /customer/:customer_id/item/create/ = Controller\Item::createForm
     /customer/:customer_id/item/edit/:item_id = Controller\Item::editForm
@@ -30,18 +23,19 @@
     /product/edit/:id = Controller\Product::editForm
     /product/delete/:id = Controller\Product::deleteProduct
     /product/create = Controller\Product::createForm
-    /products = Controller\Product::getProducts
+    /product = Controller\Product::listProduct
 
+    /customer/edit/:id = Controller\Customer::editForm
     /customer/delete/:id = Controller\Customer::deleteCustomer
-    /customer/:id = Controller\Customer::getCustomer
-    /customers = Controller\Customer::getCustomers
+    /customer/create = Controller\Customer::createForm
+    /customer/:id = Controller\Customer::viewCustomer
+    /customer = Controller\Customer::listCustomer
 
+    /admin/edit/:id = Controller\Admin::editForm
     /admin/delete/:id = Controller\Admin::deleteAdmin
-    /admin/:id = Controller\Admin::getAdmin
-    /admins = Controller\Admin::getAdmins
+    /admin/create = Controller\Admin::createForm
+    /admin = Controller\Admin::listAdmin
 
     /logout = Controller\Login::logout
-
-    /home/links = Controller\AdminHome::getLinks
 
     / = Controller\Home::Home
