add invoice cron

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -14,8 +14,10 @@
 
     / = Controller\Home::home
 [GET]
+    /customer/:customer_id/invoice/:invoice_id/paid = Controller\Invoice::invoicePaid
+    /customer/:customer_id/invoice/:invoice_id/unpaid = Controller\Invoice::invoiceUnpaid
     /customer/:customer_id/invoice/:invoice_id = Controller\Invoice::viewInvoice
-
+    
     /customer/:customer_id/item/create/ = Controller\Item::createForm
     /customer/:customer_id/item/edit/:item_id = Controller\Item::editForm
     /customer/:customer_id/item/delete/:item_id = Controller\Item::deleteItem
